# DrakoTune

./: .dockerignore  .gitignore  CURRENT_MILESTONE.md  Dockerfile  JULES_REPORT.md  README.md  fly.toml  pyproject.toml
.claude/: launch.json
AURELIAN/: README.md
control/: CONSOLIDATED_HUMAN_DECISION.md  CONSOLIDATED_HUMAN_DECISION_H1_STUDY.md  DRAKOTUNE_FULL_AUTONOMOUS_REMEDIATION_PROGRAM.md  PACKAGE_README.md  RECONCILIATION_RECORD.md  canonical-state.json  deficiency-register.yaml  evidence-index.json  execution-policy.yaml  human-gates.yaml  milestone-registry.yaml  research-registry.yaml  scorecard.yaml
data/: README.md
docs/: 01-product-brief.md  02-prd.md  03-architecture.md  04-ai-rules.md  05-implementation-plan.md  06-alpha-diagnosis-plan.md  CONTEXT_UPDATE_PROTOCOL.md  DEPLOY_FLY.md  DRAKOTUNE_CONTEXT_EXPORT.md  PILOT.md  PRIVACY.md  RISK_REGISTER.md  security.md
fixtures/: README.md  __init__.py  degradations.py  generate.py  loader.py
scripts/: ab_compare.py  audio_regression.py  batch.py  benchmark.py  build_corpus.py  build_distribution_inventory.py  build_metric_registry.py  build_sbom.py  calibrate.py  calibrate_corpus.py  check_roadmap_drift.py  listening_analyze.py  listening_prepare.py  paired_corpus_run.py  perf_benchmark.py  register_private_corpus.py  run_alpha.py
src/: orchestration.py
tests/: conftest.py  test_ab_v2_vs_legacy.py  test_acquisition.py  test_advisory.py  test_analysis.py  test_application_seam.py  test_audio_regression.py  test_batch.py  test_build_corpus.py  test_calibration.py  test_cli_parity.py  test_data_governance.py  test_decision_planner.py  test_decision_safety.py  test_deesser.py  test_degradations.py  (+40 more)
(+307 files in other folders)
