[project]
name = "drakotune"
version = "0.1.0"
description = "AI-assisted underground vocal engineering"
requires-python = ">=3.10"
dependencies = [
    "pedalboard>=0.9.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
