[project]
name = "drakotune"
version = "0.1.0"
description = "AI-assisted underground vocal engineering"
requires-python = ">=3.10"
dependencies = [
    "pedalboard>=0.9.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pyloudnorm>=0.1.1",  # BS.1770-4 integrated loudness (M18)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "scipy>=1.10.0",  # used by tests/test_diagnose.py (signal generation)
    "httpx>=0.27.0",  # FastAPI TestClient for web tests (M12)
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",  # required by FastAPI for file uploads
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
